--- a/ToDoApp/MainPage.xaml
+++ b/ToDoApp/MainPage.xaml
@@ -8,7 +8,8 @@
             <Button x:Name="Add" Text="Dodaj"
                     Clicked="Add_Clicked"/>
             <Button x:Name="Edit" Text="Edytuj"/>
-            <Button x:Name="Delete" Text="Usuń"/>
+            <Button x:Name="Delete" Text="Usuń"
+                    Clicked="Delete_Clicked"/>
         </FlexLayout>
         <ListView x:Name="TasksList">
             <ListView.ItemTemplate>
