--- a/ToDoApp/MainPage.xaml
+++ b/ToDoApp/MainPage.xaml
@@ -7,7 +7,7 @@
         <FlexLayout>
             <Button x:Name="Add" Text="Dodaj"
                     Clicked="Add_Clicked"/>
-            <Button x:Name="Edit" Text="Edytuj"/>
+            <Button x:Name="Edit" Text="Edytuj" Clicked="Edit_Clicked"/>
             <Button x:Name="Delete" Text="Usuń"/>
         </FlexLayout>
         <ListView x:Name="TasksList">
