--- a/ToDoApp/AddEditPage.xaml
+++ b/ToDoApp/AddEditPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="ToDoApp.AddEditPage">
+             x:Class="ToDoApp.AddEditPage"
+             Title="Add Page">
     <ContentPage.Content>
         <StackLayout>
             <Entry Placeholder="Tytul"
@@ -10,7 +11,9 @@
             <CheckBox x:Name="IsImportant"/>
             <Button Text="Dodaj"
                     x:Name="Add"
-                    Clicked="Add_Clicked"/>
+                    Clicked="Add_Clicked"
+                    BackgroundColor="GreenYellow"
+                    Margin="20"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
