--- a/ToDoApp/MainPage.xaml
+++ b/ToDoApp/MainPage.xaml
@@ -5,12 +5,10 @@
 
     <StackLayout>
         <FlexLayout>
-            <Button x:Name="Add" Text="Dodaj"
-                    Clicked="Add_Clicked"/>
-
+            <Button x:Name="Add"
+                    Text="Dodaj"
+                    Clicked="Add_Clicked" />
             <Button x:Name="Edit" Text="Edytuj" Clicked="Edit_Clicked"/>
-         
-      
             <Button x:Name="Delete" Text="Usuń"
                     Clicked="Delete_Clicked"/>
         </FlexLayout>
